changes have been made

--- a/dsan-website/5000-website/codes/data_gathering_p.ipynb
+++ b/dsan-website/5000-website/codes/data_gathering_p.ipynb
@@ -21,9 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since my major question focuses on gathering data from the BRICS nations, one of the initial problems faced was trying to find reliable sources to same basal columns for the five countries of Brazil, India, China, South Africa and Russia. \n",
-    "\n",
-    "Whilst finding the data for similar columns, one of the issues I had faced for, for instance, if China had information about Education, which was also one of the parameters I wanted to explore, South Africa's education did not have cut offs in data collection for primary, secondary and tertiary schools. If Adjusted National was calculated for Brazil, India's Net National Income wasn't properly adjusted. Hence, usage of API was indeed the best step forward as it helped calculated all the data points on an equal scale. \n"
+    "Since my major question focuses on gathering data from the BRICS nations, one of the initial problems faced was trying to find reliable sources to same basal columns for the five countries of Brazil, India, China, South Africa and Russia, in addition to the US, hence, usage of API helped."
    ]
   },
   {
@@ -37,12 +35,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since the data is that is majorly required is numerical data. I am retrieving data through API's and by downloading data from World Bank."
+    "Since the data is that is majorly required is numerical data. I am retrieving data through API's and by downloading data from FRED-API."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +50,6 @@
     "from IPython.display import display\n",
     "from pprint import pprint\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
     "import matplotlib.pyplot as plt \n",
     "import seaborn as sns \n",
     "import nltk\n",
@@ -93,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,17 +133,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1973-01-01    1.43e+12\n",
-      "1974-01-01    1.55e+12\n",
-      "1975-01-01    1.68e+12\n",
-      "1976-01-01    1.87e+12\n",
+      "1973-01-01    1.431848e+12\n",
+      "1974-01-01    1.553300e+12\n",
+      "1975-01-01    1.684554e+12\n",
+      "1976-01-01    1.869603e+12\n",
       "dtype: float64\n"
      ]
     }
@@ -159,12 +156,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since the data has been fetched like this using the 'get_series' function, the data was on basis of quarterly collected which is again regrouped and after pre-processing, this is how the data looks like."
+    "Since the data has been fetched like this using the 'get_series' function, the data was on basis of quarterly collected which is again regrouped and after pre-processing, this is how the data looks like. For more code understanding, refer to the `Codes` part of the tab but the following is how the final dataset looks like."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -203,205 +200,205 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>1973</td>\n",
-       "      <td>1425.38</td>\n",
-       "      <td>6106.37</td>\n",
-       "      <td>10.93</td>\n",
-       "      <td>0.49</td>\n",
-       "      <td>0.28</td>\n",
-       "      <td>1.43e+12</td>\n",
+       "      <td>1425.37600</td>\n",
+       "      <td>6106.37050</td>\n",
+       "      <td>10.925</td>\n",
+       "      <td>0.492313</td>\n",
+       "      <td>0.275</td>\n",
+       "      <td>1.431848e+12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>1974</td>\n",
-       "      <td>1545.24</td>\n",
-       "      <td>6073.36</td>\n",
-       "      <td>9.20</td>\n",
-       "      <td>0.13</td>\n",
-       "      <td>-0.05</td>\n",
-       "      <td>1.55e+12</td>\n",
+       "      <td>1545.24250</td>\n",
+       "      <td>6073.36275</td>\n",
+       "      <td>9.200</td>\n",
+       "      <td>0.129574</td>\n",
+       "      <td>-0.050</td>\n",
+       "      <td>1.553300e+12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>1975</td>\n",
-       "      <td>1684.90</td>\n",
-       "      <td>6060.88</td>\n",
-       "      <td>6.50</td>\n",
-       "      <td>1.08</td>\n",
-       "      <td>0.95</td>\n",
-       "      <td>1.68e+12</td>\n",
+       "      <td>1684.90500</td>\n",
+       "      <td>6060.87525</td>\n",
+       "      <td>6.500</td>\n",
+       "      <td>1.075657</td>\n",
+       "      <td>0.950</td>\n",
+       "      <td>1.684554e+12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>1976</td>\n",
-       "      <td>1873.41</td>\n",
-       "      <td>6387.44</td>\n",
-       "      <td>7.45</td>\n",
-       "      <td>0.23</td>\n",
-       "      <td>-0.05</td>\n",
-       "      <td>1.87e+12</td>\n",
+       "      <td>1873.41250</td>\n",
+       "      <td>6387.43650</td>\n",
+       "      <td>7.450</td>\n",
+       "      <td>0.233895</td>\n",
+       "      <td>-0.050</td>\n",
+       "      <td>1.869603e+12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>1977</td>\n",
-       "      <td>2081.82</td>\n",
-       "      <td>6682.80</td>\n",
-       "      <td>8.12</td>\n",
-       "      <td>-0.68</td>\n",
-       "      <td>-1.12</td>\n",
-       "      <td>2.08e+12</td>\n",
+       "      <td>2081.82500</td>\n",
+       "      <td>6682.80450</td>\n",
+       "      <td>8.125</td>\n",
+       "      <td>-0.683540</td>\n",
+       "      <td>-1.125</td>\n",
+       "      <td>2.082670e+12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>5</td>\n",
        "      <td>1978</td>\n",
-       "      <td>2351.60</td>\n",
-       "      <td>7052.71</td>\n",
-       "      <td>9.38</td>\n",
-       "      <td>-0.66</td>\n",
-       "      <td>-1.12</td>\n",
-       "      <td>2.35e+12</td>\n",
+       "      <td>2351.59875</td>\n",
+       "      <td>7052.71125</td>\n",
+       "      <td>9.375</td>\n",
+       "      <td>-0.661201</td>\n",
+       "      <td>-1.125</td>\n",
+       "      <td>2.349856e+12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>6</td>\n",
        "      <td>1979</td>\n",
-       "      <td>2627.33</td>\n",
-       "      <td>7276.00</td>\n",
-       "      <td>9.20</td>\n",
-       "      <td>-0.01</td>\n",
-       "      <td>-0.88</td>\n",
-       "      <td>2.61e+12</td>\n",
+       "      <td>2627.32625</td>\n",
+       "      <td>7275.99925</td>\n",
+       "      <td>9.200</td>\n",
+       "      <td>-0.012445</td>\n",
+       "      <td>-0.875</td>\n",
+       "      <td>2.614202e+12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>7</td>\n",
        "      <td>1980</td>\n",
-       "      <td>2857.31</td>\n",
-       "      <td>7257.32</td>\n",
-       "      <td>7.05</td>\n",
-       "      <td>0.07</td>\n",
-       "      <td>-0.45</td>\n",
-       "      <td>2.85e+12</td>\n",
+       "      <td>2857.30850</td>\n",
+       "      <td>7257.31650</td>\n",
+       "      <td>7.050</td>\n",
+       "      <td>0.073883</td>\n",
+       "      <td>-0.450</td>\n",
+       "      <td>2.847055e+12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>8</td>\n",
        "      <td>1981</td>\n",
-       "      <td>3207.04</td>\n",
-       "      <td>7441.48</td>\n",
-       "      <td>8.00</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>-0.38</td>\n",
-       "      <td>3.20e+12</td>\n",
+       "      <td>3207.04125</td>\n",
+       "      <td>7441.48500</td>\n",
+       "      <td>8.000</td>\n",
+       "      <td>0.156610</td>\n",
+       "      <td>-0.375</td>\n",
+       "      <td>3.201886e+12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>9</td>\n",
        "      <td>1982</td>\n",
-       "      <td>3343.79</td>\n",
-       "      <td>7307.31</td>\n",
-       "      <td>5.62</td>\n",
-       "      <td>-0.16</td>\n",
-       "      <td>-0.60</td>\n",
-       "      <td>3.37e+12</td>\n",
+       "      <td>3343.78925</td>\n",
+       "      <td>7307.31400</td>\n",
+       "      <td>5.625</td>\n",
+       "      <td>-0.161860</td>\n",
+       "      <td>-0.600</td>\n",
+       "      <td>3.371448e+12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>10</td>\n",
        "      <td>1983</td>\n",
-       "      <td>3634.04</td>\n",
-       "      <td>7642.27</td>\n",
-       "      <td>4.28</td>\n",
-       "      <td>-1.05</td>\n",
-       "      <td>-1.43</td>\n",
-       "      <td>3.61e+12</td>\n",
+       "      <td>3634.03650</td>\n",
+       "      <td>7642.26550</td>\n",
+       "      <td>4.275</td>\n",
+       "      <td>-1.048021</td>\n",
+       "      <td>-1.425</td>\n",
+       "      <td>3.614168e+12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>11</td>\n",
        "      <td>1984</td>\n",
-       "      <td>4037.61</td>\n",
-       "      <td>8195.30</td>\n",
-       "      <td>7.03</td>\n",
-       "      <td>-2.33</td>\n",
-       "      <td>-2.52</td>\n",
-       "      <td>4.03e+12</td>\n",
+       "      <td>4037.61400</td>\n",
+       "      <td>8195.29525</td>\n",
+       "      <td>7.025</td>\n",
+       "      <td>-2.333596</td>\n",
+       "      <td>-2.525</td>\n",
+       "      <td>4.032292e+12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>12</td>\n",
        "      <td>1985</td>\n",
-       "      <td>4338.98</td>\n",
-       "      <td>8537.00</td>\n",
-       "      <td>5.60</td>\n",
-       "      <td>-2.72</td>\n",
-       "      <td>-2.65</td>\n",
-       "      <td>4.31e+12</td>\n",
+       "      <td>4338.98050</td>\n",
+       "      <td>8537.00375</td>\n",
+       "      <td>5.600</td>\n",
+       "      <td>-2.717181</td>\n",
+       "      <td>-2.650</td>\n",
+       "      <td>4.310074e+12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>13</td>\n",
        "      <td>1986</td>\n",
-       "      <td>4579.63</td>\n",
-       "      <td>8832.61</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>-3.21</td>\n",
-       "      <td>-2.88</td>\n",
-       "      <td>4.52e+12</td>\n",
+       "      <td>4579.63250</td>\n",
+       "      <td>8832.61125</td>\n",
+       "      <td>4.000</td>\n",
+       "      <td>-3.212077</td>\n",
+       "      <td>-2.875</td>\n",
+       "      <td>4.516535e+12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>14</td>\n",
        "      <td>1987</td>\n",
-       "      <td>4855.22</td>\n",
-       "      <td>9137.74</td>\n",
-       "      <td>4.53</td>\n",
-       "      <td>-3.31</td>\n",
-       "      <td>-3.00</td>\n",
-       "      <td>4.83e+12</td>\n",
+       "      <td>4855.21625</td>\n",
+       "      <td>9137.74475</td>\n",
+       "      <td>4.525</td>\n",
+       "      <td>-3.309330</td>\n",
+       "      <td>-3.000</td>\n",
+       "      <td>4.828878e+12</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Unnamed: 0  Year      GDP  Real GDP  Adjusted Savings  \\\n",
-       "0            0  1973  1425.38   6106.37             10.93   \n",
-       "1            1  1974  1545.24   6073.36              9.20   \n",
-       "2            2  1975  1684.90   6060.88              6.50   \n",
-       "3            3  1976  1873.41   6387.44              7.45   \n",
-       "4            4  1977  2081.82   6682.80              8.12   \n",
-       "5            5  1978  2351.60   7052.71              9.38   \n",
-       "6            6  1979  2627.33   7276.00              9.20   \n",
-       "7            7  1980  2857.31   7257.32              7.05   \n",
-       "8            8  1981  3207.04   7441.48              8.00   \n",
-       "9            9  1982  3343.79   7307.31              5.62   \n",
-       "10          10  1983  3634.04   7642.27              4.28   \n",
-       "11          11  1984  4037.61   8195.30              7.03   \n",
-       "12          12  1985  4338.98   8537.00              5.60   \n",
-       "13          13  1986  4579.63   8832.61              4.00   \n",
-       "14          14  1987  4855.22   9137.74              4.53   \n",
+       "    Unnamed: 0  Year         GDP    Real GDP  Adjusted Savings  \\\n",
+       "0            0  1973  1425.37600  6106.37050            10.925   \n",
+       "1            1  1974  1545.24250  6073.36275             9.200   \n",
+       "2            2  1975  1684.90500  6060.87525             6.500   \n",
+       "3            3  1976  1873.41250  6387.43650             7.450   \n",
+       "4            4  1977  2081.82500  6682.80450             8.125   \n",
+       "5            5  1978  2351.59875  7052.71125             9.375   \n",
+       "6            6  1979  2627.32625  7275.99925             9.200   \n",
+       "7            7  1980  2857.30850  7257.31650             7.050   \n",
+       "8            8  1981  3207.04125  7441.48500             8.000   \n",
+       "9            9  1982  3343.78925  7307.31400             5.625   \n",
+       "10          10  1983  3634.03650  7642.26550             4.275   \n",
+       "11          11  1984  4037.61400  8195.29525             7.025   \n",
+       "12          12  1985  4338.98050  8537.00375             5.600   \n",
+       "13          13  1986  4579.63250  8832.61125             4.000   \n",
+       "14          14  1987  4855.21625  9137.74475             4.525   \n",
        "\n",
-       "    Current Account Balance  Exports of Goods and Services       GNI  \n",
-       "0                      0.49                           0.28  1.43e+12  \n",
-       "1                      0.13                          -0.05  1.55e+12  \n",
-       "2                      1.08                           0.95  1.68e+12  \n",
-       "3                      0.23                          -0.05  1.87e+12  \n",
-       "4                     -0.68                          -1.12  2.08e+12  \n",
-       "5                     -0.66                          -1.12  2.35e+12  \n",
-       "6                     -0.01                          -0.88  2.61e+12  \n",
-       "7                      0.07                          -0.45  2.85e+12  \n",
-       "8                      0.16                          -0.38  3.20e+12  \n",
-       "9                     -0.16                          -0.60  3.37e+12  \n",
-       "10                    -1.05                          -1.43  3.61e+12  \n",
-       "11                    -2.33                          -2.52  4.03e+12  \n",
-       "12                    -2.72                          -2.65  4.31e+12  \n",
-       "13                    -3.21                          -2.88  4.52e+12  \n",
-       "14                    -3.31                          -3.00  4.83e+12  "
+       "    Current Account Balance  Exports of Goods and Services           GNI  \n",
+       "0                  0.492313                          0.275  1.431848e+12  \n",
+       "1                  0.129574                         -0.050  1.553300e+12  \n",
+       "2                  1.075657                          0.950  1.684554e+12  \n",
+       "3                  0.233895                         -0.050  1.869603e+12  \n",
+       "4                 -0.683540                         -1.125  2.082670e+12  \n",
+       "5                 -0.661201                         -1.125  2.349856e+12  \n",
+       "6                 -0.012445                         -0.875  2.614202e+12  \n",
+       "7                  0.073883                         -0.450  2.847055e+12  \n",
+       "8                  0.156610                         -0.375  3.201886e+12  \n",
+       "9                 -0.161860                         -0.600  3.371448e+12  \n",
+       "10                -1.048021                         -1.425  3.614168e+12  \n",
+       "11                -2.333596                         -2.525  4.032292e+12  \n",
+       "12                -2.717181                         -2.650  4.310074e+12  \n",
+       "13                -3.212077                         -2.875  4.516535e+12  \n",
+       "14                -3.309330                         -3.000  4.828878e+12  "
       ]
      },
      "metadata": {},
@@ -409,7 +406,7 @@
     }
    ],
    "source": [
-    "df= pd.read_csv('../data/raw_fred_data_us.csv')\n",
+    "df= pd.read_csv('../data/csv_files_api/raw_fred_data_us.csv')\n",
     "\n",
     "display(df.head(15))"
    ]
@@ -444,14 +441,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/cm/1bq_zvw92w99j_5d1p5jq5v40000gn/T/ipykernel_25910/988797959.py:11: DeprecationWarning: Positional arguments for 'BaseListingMixin.top' will no longer be supported in PRAW 8.\n",
+      "/var/folders/cm/1bq_zvw92w99j_5d1p5jq5v40000gn/T/ipykernel_79205/988797959.py:11: DeprecationWarning: Positional arguments for 'BaseListingMixin.top' will no longer be supported in PRAW 8.\n",
       "Call this function with 'time_filter' as a keyword argument.\n",
       "  for submission in reddit.subreddit(\"Brics\").top(\"all\"):\n"
      ]
@@ -479,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -603,6 +600,24 @@
    "metadata": {},
    "source": [
     "Here, we can see that the data has a lot of cleaning to do, but this data in gist will help to understand the opinions of people since it has been pulled from the REDDIT API."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Source"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Federal Reserve Economic Data (FRED). (n.d.). FRED API Documentation. https://fred.stlouisfed.org/docs/api/fred/\n",
+    "2. Pedregosa, F., Varoquaux, G., Gramfort, A., Michel, V., Thirion, B., Grisel, O., ... & Vanderplas, J. (2021). sklearn.feature_extraction.text.CountVectorizer. https://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.CountVectorizer.html\n",
+    "3. PRAW Development Team. (n.d.). PRAW Documentation. https://praw.readthedocs.io/en/stable/\n",
+    "4. Reddit. (n.d.). Reddit API Documentation. https://www.reddit.com/dev/api/\n",
+    "5. Reddit. (n.d.). Reddit API - All Endpoints. https://www.reddit.com/dev/api/"
    ]
   }
  ],
