--- a/dsan-website/5000-website/codes/data_gathering_r.ipynb
+++ b/dsan-website/5000-website/codes/data_gathering_r.ipynb
@@ -65,7 +65,7 @@
    "source": [
     "For R API, to retrieve more data about the US, R API, wbstats() API has been used.\n",
     "\n",
-    "After the ‘wbstats’ library has been called, the series IDs are inserted and then the final data is merged. The data is being collected from 1974 to 2023"
+    "After the ‘wbstats’ library has been called, the series IDs are inserted and then the final data is merged. The data is being collected from 1974 to 2023. The wbstats API is a good source for socio-economic data which is useful for integration into webservices. "
    ]
   },
   {
@@ -288,7 +288,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. The World Bank. (n.d.). wbstats: An R Package for Searching and Downloading Data from the World Bank API. Retrieved from https://cran.r-project.org/web/packages/wbstats/vignettes/wbstats.html\n",
+    "Website:\n",
+    "2. Wickham, H., & Müller, K. (n.d.). Tibble: Simple Data Frames. Retrieved from https://tibble.tidyverse.org/\n",
+    "3. Roberts, J. T. (2011). Multipolarity and the new world (dis) order: US hegemonic decline and the fragmentation of the global climate regime. Global environmental change, 21(3), 776-784."
+   ]
   }
  ],
  "metadata": {
