changes have been made

--- a/dsan-website/5000-website/codes/data_cleaning_p.ipynb
+++ b/dsan-website/5000-website/codes/data_cleaning_p.ipynb
@@ -136,6 +136,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some of the major problems faced here was that the data was quaterly in nature and hence had to resample it to a 'Year' by taking the average across all the quarters for that each specific year and then it is finally merged."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -1011,7 +1018,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Source "
+    "## Source \n",
+    "\n",
+    "1. Hickman, J. (n.d.). DSAN5000 Slides and Labs: News API Code Demos. Retrieved from https://jfh.georgetown.domains/dsan5000/slides-and-labs/_site/content/labs/code-demos/API-newapi/news-api.html\n",
+    "2. Federal Reserve Economic Data (FRED). (n.d.). FRED API Documentation. Retrieved from https://fred.stlouisfed.org/docs/api/fred/\n",
+    "3. Stack Overflow Community. (n.d.). Removing emojis from a string in Python. Retrieved from https://stackoverflow.com/questions/33404752/removing-emojis-from-a-string-in-python\n",
+    "4. slowkow. (n.d.). Remove Emoji Python Script. Retrieved from https://gist.github.com/slowkow/7a7f61f495e3dbb7e3d767f97bd7304b\n",
+    "5. Mahreen, J . (2022). Sentiment Analysis using VADER. Retrieved from https://www.analyticsvidhya.com/blog/2022/10/sentiment-analysis-using-vader/"
    ]
   }
  ],
