--- a/dsan-website/5000-website/codes/data_cleaning_record.ipynb
+++ b/dsan-website/5000-website/codes/data_cleaning_record.ipynb
@@ -395,14 +395,14 @@
     "\n",
     "#pip install xlrd\n",
     "df=pd.read_excel('../data/excel_files/india.xlsx')\n",
-    "df.head(10)"
+    "df.head(5)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You see that the data is very messy and this was the case with all the 5 individual datasets. "
+    "You see that the data is very messy and this was the case with all the 5 individual datasets. Cleaning all of them took time but to refer to more of this from the `Codes` Tab"
    ]
   },
   {
@@ -1856,14 +1856,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://policycommons.net/artifacts/1412671/best-gdp-growth-in-a-year-still-not-good-enough/2026934/\n",
-    "\n",
-    "\n",
-    "https://ideas.repec.org/p/fip/fednsr/94635.html\n",
-    "\n",
-    "https://www.sciencedirect.com/science/article/pii/S0378437116309475?casa_token=m-i7E8n52w4AAAAA:QNYOYUv0zCTcAhLbPZ5ax3wg8dWBjSmwO-OBVa4xjSOOjX1yQ4Ydcw9IFls40ZPvsJodYTtzBpc\n",
-    "\n",
-    "https://corporatefinanceinstitute.com/resources/economics/economic-growth-rate/"
+    "1. Policy Commons. (n.d.). Best GDP Growth in a Year Still Not Good Enough. Retrieved from https://policycommons.net/artifacts/1412671/best-gdp-growth-in-a-year-still-not-good-enough/2026934/\n",
+    "2. Golosov, M., Troshkin, M., & Tsyvinski, A. (2022). Optimal Taxation with Rent-Seeking (No. 2022-02). Retrieved from https://ideas.repec.org/p/fip/fednsr/94635.html\n",
+    "3. Ciscar, J. C., Iglesias, A. et al. (2016). Assessing the economic impacts of hydrological changes induced by climate change. Retrieved from https://www.sciencedirect.com/science/article/pii/S0378437116309475?casa_token=m-i7E8n52w4AAAAA:QNYOYUv0zCTcAhLbPZ5ax3wg8dWBjSmwO-OBVa4xjSOOjX1yQ4Ydcw9IFls40ZPvsJodYTtzBpc\n",
+    "4. Corporate Finance Institute. (n.d.). Economic Growth Rate. Retrieved from https://corporatefinanceinstitute.com/resources/economics/economic-growth-rate/"
    ]
   }
  ],
