--- a/dsan-website/5000-website/codes/decisiontree_r.ipynb
+++ b/dsan-website/5000-website/codes/decisiontree_r.ipynb
@@ -1125,7 +1125,7 @@
    ],
    "source": [
     "\n",
-    "headers = [\"Metric\", \"Baseline\", \"Grid Search\"]\n",
+    "headers = [\"Metric\", \"Baseline\", \"GridSearchCV\"]\n",
     "\n",
     "# training set\n",
     "metrics_training2 = [\n",
@@ -1171,7 +1171,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In accordance to the performance, that there is still overfitting of the data in terms of the RMSE from the training and testing data for both baseline Random Forest and the one that is tuned by GridSearchCV, however, we see that out of all the models, the GridSearchCV with Random Forest works the best."
+    "Decision Tree: \n",
+    "\n",
+    "On training, testing, and validation sets, the decision tree model's performance is assessed using a variety of metrics, such as Root Mean Squared Error (RMSE), R2 Score, Mean Squared Error (MSE), and Explained Variance. The decision tree shows remarkable results when compared to the baseline model; it achieves almost zero RMSE on the training set, indicating a very good fit. The training data exhibits a high degree of explained variance, as indicated by an R2 Score that is nearly 100%. On the other hand, the model shows somewhat higher RMSE values and lower R2 Scores on the testing and validation sets, suggesting a moderate decline in performance on unseen data. Hyperparameter tuning techniques for GridSearchCV and RandomisedSearchCV show slight improvements over the initial version, with RandomisedSearchCV outperforming GridSearchCV.\n",
+    "\n",
+    "Random Forest: \n",
+    "\n",
+    "Across training, testing, and validation sets, the Random Forest model's performance is assessed using important metrics such as Root Mean Squared Error (RMSE), R2 Score, Mean Squared Error (MSE), and Explained Variance.The Random Forest model shows significant improvements over the baseline model, with lower RMSE values, higher R2 Scores, and reduced MSE. These results suggest improved predictive accuracy and better fit to the data. The high R2 Score and low RMSE of the training set results demonstrate the model's ability to capture the underlying patterns.The model's ability to generalise is demonstrated by these encouraging trends, which hold true for the testing and validation sets. All metrics show slight improvements from the baseline when Grid Search hyperparameters are tuned. For this regression task, the Random Forest model is a dependable option due to its overall strong predictive performance."
    ]
   },
   {
@@ -1196,17 +1202,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. https://samanemami.medium.com/evaluate-the-decision-regressor-tree-d8394d753ae7\n",
-    "2. https://insidelearningmachines.com/tune_hyperparameters_in_decision_trees/\n",
-    "3. https://www.kaggle.com/code/carloscliment/random-forest-regressor-and-gridsearch\n",
-    "4. https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.RandomizedSearchCV.html  \n",
-    "5. https://stackoverflow.com/questions/53782169/random-forest-tuning-with-randomizedsearchcv\n",
-    "6. https://www.analyticsvidhya.com/blog/2022/11/hyperparameter-tuning-using-randomized-search/\n",
-    "7. https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html\n",
-    "8. https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html\n",
-    "9. https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeRegressor.html\n",
-    "10. https://pypi.org/project/tabulate/\n",
-    "11. https://pypi.org/project/treeplot/\n"
+    "1. Maverick, AL. (2021). Evaluate the Decision Regressor Tree. Medium. https://samanemami.medium.com/evaluate-the-decision-regressor-tree-d8394d753ae7\n",
+    "2. Inside Learning Machines. (n.d.). Tune Hyperparameters in Decision Trees. https://insidelearningmachines.com/tune_hyperparameters_in_decision_trees/\n",
+    "3. Climent, C. (n.d.). Random Forest Regressor and GridSearch. Kaggle. https://www.kaggle.com/code/carloscliment/random-forest-regressor-and-gridsearch\n",
+    "4. scikit-learn. (n.d.). RandomizedSearchCV. https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.RandomizedSearchCV.html\n",
+    "5. Stack Overflow. (2018). Random Forest tuning with RandomizedSearchCV. https://stackoverflow.com/questions/53782169/random-forest-tuning-with-randomizedsearchcv\n",
+    "6. Banerjee, A. (2022). Hyperparameter Tuning using Randomized Search. https://www.analyticsvidhya.com/blog/2022/11/hyperparameter-tuning-using-randomized-search/\n",
+    "7. scikit-learn. (n.d.). GridSearchCV. https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html\n",
+    "8. scikit-learn. (n.d.). RandomForestRegressor. https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html\n",
+    "9. scikit-learn. (n.d.). DecisionTreeRegressor. https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeRegressor.html\n",
+    "10. PyPI. (n.d.). tabulate. https://pypi.org/project/tabulate/\n",
+    "11. PyPI. (n.d.). treeplot. https://pypi.org/project/treeplot/\n"
    ]
   }
  ],
