the changes have been made

--- a/dsan-website/5000-website/codes/decisiontree_c.ipynb
+++ b/dsan-website/5000-website/codes/decisiontree_c.ipynb
@@ -1913,28 +1913,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://scikit-learn.org/stable/modules/generated/sklearn.metrics.ConfusionMatrixDisplay.html#sklearn.metrics.ConfusionMatrixDisplay\n",
-    "\n",
-    "https://scikit-learn.org/stable/modules/tree.html\n",
-    "\n",
-    "https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeClassifier.html\n",
-    "\n",
-    "https://towardsdatascience.com/decision-tree-classifier-explained-in-real-life-picking-a-vacation-destination-6226b2b60575\n",
-    "\n",
-    "https://plainenglish.io/blog/hyperparameter-tuning-of-decision-tree-classifier-using-gridsearchcv-2a6ebcaffeda\n",
-    "\n",
-    "https://medium.com/analytics-vidhya/decisiontree-classifier-working-on-moons-dataset-using-gridsearchcv-to-find-best-hyperparameters-ede24a06b489\n",
-    "\n",
-    "https://www.analyticsvidhya.com/blog/2022/11/hyperparameter-tuning-using-randomized-search/\n",
-    "\n",
-    "https://scikit-learn.org/stable/modules/generated/sklearn.metrics.ConfusionMatrixDisplay.html\n",
-    "\n",
-    "https://www.ibm.com/topics/random-forest#:~:text=Random%20forest%20is%20a%20commonly,both%20classification%20and%20regression%20problems.\n",
-    "\n",
-    "https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html\n",
-    "\n",
-    "https://towardsdatascience.com/hyperparameter-tuning-the-random-forest-in-python-using-scikit-learn-28d2aa77dd74\n",
-    "\n"
+    "1. sklearn.metrics.ConfusionMatrixDisplay Documentation. (n.d.). Retrieved from https://scikit-learn.org/stable/modules/generated/sklearn.metrics.ConfusionMatrixDisplay.html\n",
+    "2. scikit-learn Decision Tree Module Documentation. (n.d.). Retrieved from https://scikit-learn.org/stable/modules/tree.html\n",
+    "3. scikit-learn DecisionTreeClassifier Documentation. (n.d.). Retrieved from https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeClassifier.html\n",
+    "4. Decision Tree Classifier Explained in Real Life: Picking a Vacation Destination. (n.d.). Retrieved from https://towardsdatascience.com/decision-tree-classifier-explained-in-real-life-picking-a-vacation-destination-6226b2b60575\n",
+    "5. Hyperparameter Tuning of Decision Tree Classifier using GridSearchCV. (n.d.). Retrieved from https://plainenglish.io/blog/hyperparameter-tuning-of-decision-tree-classifier-using-gridsearchcv-2a6ebcaffeda\n",
+    "6. Decision Tree Classifier: Working on Moons Dataset using GridSearchCV to Find Best Hyperparameters. (n.d.). Retrieved from https://medium.com/analytics-vidhya/decisiontree-classifier-working-on-moons-dataset-using-gridsearchcv-to-find-best-hyperparameters-ede24a06b489\n",
+    "7. Hyperparameter Tuning using Randomized Search. (n.d.). Retrieved from https://www.analyticsvidhya.com/blog/2022/11/hyperparameter-tuning-using-randomized-search/\n",
+    "8. Random Forest - IBM Topics. (n.d.). Retrieved from https://www.ibm.com/topics/random-forest#:~:text=Random%20forest%20is%20a%20commonly,both%20classification%20and%20regression%20problems.\n",
+    "9. sklearn.ensemble.RandomForestClassifier Documentation. (n.d.). Retrieved from https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html\n",
+    "10. Hyperparameter Tuning the Random Forest in Python using scikit-learn. (n.d.). Retrieved from https://towardsdatascience.com/hyperparameter-tuning-the-random-forest-in-python-using-scikit-learn-28d2aa77dd74\n"
    ]
   }
  ],
